# mdink

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  install.sh
.github/workflows/: ci.yml  release.yml
assets/: make_logo.py
assets/syntaxes/: MySQL.sublime-syntax  Oracle.sublime-syntax  PostgreSQL.sublime-syntax  TSQL.sublime-syntax
packaging/aur/: PKGBUILD
packaging/homebrew/: mdink.rb
plans/: feature_advanced.md  feature_diagnostics.md  feature_math.md  feature_nav.md  feature_rendering.md  feature_search.md  feature_theme_print.md  overview.md  phase4_images.md  standards.md
src/: app.rs  app_tests.rs  cli.rs  config.rs  font_detect.rs  highlight.rs  highlight_tests.rs  images.rs  layout.rs  layout_tests.rs  logging.rs  main.rs  parser.rs  parser_tests.rs  pdf.rs  renderer.rs
src/app/: mod.rs  tests.rs
src/highlight/: mod.rs  tests.rs
src/images/: mod.rs  tests.rs
src/layout/: mod.rs  tests.rs
src/math/: mod.rs  tests.rs
src/parser/: mod.rs  tests.rs
src/theme/: dark.json  dracula.json  light.json  mod.rs  print.json  tests.rs  theme_tests.rs
testdata/: ascii-images-test.md  blockquotes.md  font-slots.md  html-images.md  images.md  links.md  lists.md  math-demo.md  math-showcase.md  math.md  remote-images.md  showcase.md  sql-dialect-differences.md  sql-dialects.md  stress-test.md  syntax-languages.md  tables-wrap.md  tables.md
xtask/: Cargo.toml
xtask/src/: main.rs
